arreglo de preguntas frecuentes

--- a/index.html
+++ b/index.html
@@ -700,31 +700,72 @@
                       <!--faq 7-->
                           <div class="card">
                               <div class="card-header background-white" id="heading_7">
-                              <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_6" aria-expanded="true" aria-controls="collapse_7"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Cuáles son las Cobertura del seguro de auto?</h6>
+                              <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_7" aria-expanded="true" aria-controls="collapse_7"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Cuáles son las Cobertura del seguro de auto?</h6>
                               </div>
                               <div class="collapse" id="collapse_7" aria-labelledby="heading_7" data-parent="#faqAccordion">
                                   <div class="card-body">                                 
-                                      <p> El seguro tienes 4 coberturas básicas, y opcionalmente puedes elegir 5 coberturas y 1 asistencia. Las coberturas básicas son Responsabilidad Civil, Pérdida Total por Accidente. Pérdida Total por Robo y Extraterritorialidad gratuita por toda la vigencia de la póliza. Las coberturas opcionales y asistencia opcionales son Robo Parcial, Cubre el robo de partes y accesorios, Cobertura de Muerte y Accidentes personales, Rehabilitación automática suma asegurada, Daños propios, Huelgas, Riesgos Políticos, Conmoción Civil y Daño Malicioso incluyendo terrorismo y asistencia de Auxilio mecánico. Para mayor información sobre las coberturas descarga la App.</p>                                       
+                                      <p>El seguro tienes 4 coberturas básicas, y opcionalmente puedes elegir 5 coberturas y 1 asistencia.</p>
+                                      <p>Las coberturas básicas son Responsabilidad Civil, Pérdida Total por Accidente. Pérdida Total por Robo y Extraterritorialidad gratuita por toda la vigencia de la póliza. </p>          
+                                        <p>Las coberturas opcionales y asistencia opcionales son Robo Parcial, Cubre el robo de partes y accesorios, Cobertura de Muerte y Accidentes personales, Rehabilitación automática suma asegurada, Daños propios, Huelgas, Daño Malicioso incluyendo terrorismo y asistencia de Auxilio mecánico.
+                                        </p>                                       
                                   </div>
                               </div>
                           </div>    
-                      <!--faq 8-->
+                       <!--faq 8-->
+                       <div class="card">
+                        <div class="card-header background-white" id="heading_7">
+                        <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_8" aria-expanded="true" aria-controls="collapse_8"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Cuándo y dónde debo pagar el seguro?</h6>
+                        </div>
+                        <div class="collapse" id="collapse_8" aria-labelledby="heading_8" data-parent="#faqAccordion">
+                            <div class="card-body">                                 
+                                <p>Se te dará un plan de pago, en el plan podrás ver las fechas máximas en las que debes realizar el pago. Este plan de pagos lo puedes visualizar en “ícono de pagos pendientes”, en este mismo ícono puedes realizar los pagos. Si no pagas hasta la fecha que indica tu plan de pagos entrarás en mora</p>
+                                     
+                            </div>
+                        </div>
+                    </div>    
+                     <!--faq 9-->
+                     <div class="card">
+                      <div class="card-header background-white" id="heading_9">
+                      <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_9" aria-expanded="true" aria-controls="collapse_9"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Qué pasa si me atraso en el pago de mis cuotas?</h6>
+                      </div>
+                      <div class="collapse" id="collapse_9" aria-labelledby="heading_9" data-parent="#faqAccordion">
+                          <div class="card-body">                                 
+                              <p>Si te atrasas en el pago de tus cuotas entras en mora, lo cual significa que no tendrás cobertura y en el caso de ocurrir un siniestro la compañía no cubrirá dicho siniestro.</p>
+                                <p>En el momento que pagues (siempre y cuando sea dentro de los 30 días desde la fecha indicada) se rehabilitan las coberturas. 
+                                </p>    
+                              <p>Si no pagas dentro de los 30 días desde la fecha indicada en el plan de pagos el certificado de cobertura quedará anulado automáticamente. Y para tener coberturas deberás adquirir un nuevo seguro. </p>          
+                                                                   
+                          </div>
+                      </div>
+                  </div>    
+                      <!--faq 10-->
                           <div class="card">
-                              <div class="card-header background-white" id="heading_8">
-                              <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_8" aria-expanded="true" aria-controls="collapse_8"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Qué beneficio recibo si hago que mis amigos adquieran su seguro mediante la App de miBigBro?</h6>
+                              <div class="card-header background-white" id="heading_10">
+                              <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_10" aria-expanded="true" aria-controls="collapse_10"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Qué beneficio recibo si hago que mis amigos adquieran su seguro mediante la App de miBigBro?</h6>
                               </div>
-                              <div class="collapse" id="collapse_8" aria-labelledby="heading_8" data-parent="#faqAccordion">
+                              <div class="collapse" id="collapse_10" aria-labelledby="heading_8" data-parent="#faqAccordion">
                                   <div class="card-body">                                 
                                       <p>Si compartes y recomiendas el uso de miBigBro, y 5 amigos tuyos adquieren el seguro mediante esta App recibes el beneficio de una inspección vehicular sin costo alguno. </p>                                       
                                   </div>
                               </div>
-                          </div>                                 
-                      <!--faq 9-->
+                          </div>               
+                      <!--faq 11-->
+                      <div class="card">
+                        <div class="card-header background-white" id="heading_11">
+                        <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_11" aria-expanded="true" aria-controls="collapse_11"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Cómo acumulo puntos? ¿Y Para qué sirven? </h6>
+                        </div>
+                        <div class="collapse" id="collapse_11" aria-labelledby="heading_11" data-parent="#faqAccordion">
+                            <div class="card-body">                                 
+                                <p>Por cada día corrido de seguro recibes un punto, estos puntos los puedes visualizar en el menú principal. Los puntos son canjeados por beneficios. </p>                                       
+                            </div>
+                        </div>
+                    </div>                                 
+                      <!--faq 12-->
                           <div class="card">
                               <div class="card-header background-white" id="heading_9">
-                              <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_9" aria-expanded="true" aria-controls="collapse_9"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Qué beneficio recibo si tengo más de 180 (puntos) días del seguro miBigBro?</h6>
+                              <h6 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapse_12" aria-expanded="true" aria-controls="collapse_12"><i class="icon-faq" ><img src="assets/icons/icon-plus.svg" /></i>¿Qué beneficio recibo si tengo más de 180 (puntos) días del seguro miBigBro?</h6>
                               </div>
-                              <div class="collapse" id="collapse_9" aria-labelledby="heading_9" data-parent="#faqAccordion">
+                              <div class="collapse" id="collapse_12" aria-labelledby="heading_12" data-parent="#faqAccordion">
                                   <div class="card-body">                                 
                                       <p>Si tienes acumulado más de 180 días (puntos) de tu seguro de auto miBigBro recibes una inspección vehicular rápida o un lavado general para tu auto.</p>                                       
                                   </div>
