--- a/index.html
+++ b/index.html
@@ -790,6 +790,7 @@
             <div class="col-12 text-center">
               <h5 class="mensaje text-center">Extraterritorialidad gratuita por toda la vigencia de la póliza. </h5>
               <a href="https://www.sudseguros.com/"  target="_blank"><img class="logo-suramericana" src="assets/img/logo-sudamericana-footer.svg" alt="logo Suramericana" /></a>
+              <a href="terminos.html"  target="_blank"><h5 class="mensaje text-center" style="text-decoration: underline;">Términos y condiciones de uso.</h5></a>
             </div>
            </div>
            <div class="row">
