--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                       <div class="col-lg-6 col-md-12 my-2">
                         <div class="card">
                           <div class="card-body">    
-                            <h5 class="card-title text-center">Puede elegir paquetes a tu medida.</h5>                
-                            <p class="card-text text-center">Elige tu seguro por los días o tiempo que lo necesites, desde 7 días a un año. Elige tu seguro de acuerdo al dinero con el que cuentes disponible, entre Bs 50 y Bs 1.000.</p>                    
+                            <h5 class="card-title text-center">Vale lo que cuesta y no pesa en tu bolsillo..</h5>                
+                            <p class="card-text text-center">Estamos aquí para brindar servicios de primera clase a un precio justo. Esto es rentable para el seguro en línea que lo vale.</p>                    
                           </div>
                         </div>
                       </div>
@@ -254,8 +254,8 @@
                       <div class="col-lg-6 col-md-12  my-2">
                         <div class=" card">
                           <div class="card-body">    
-                            <h5 class="card-title text-center">Puede elegir paquetes a tu medida.</h5>                
-                            <p class="card-text text-center">Elige tu seguro por los días o tiempo que lo necesites, desde 7 días a un año. Elige tu seguro de acuerdo al dinero con el que cuentes disponible, entre Bs 50 y Bs 1.000.</p>                    
+                            <h5 class="card-title text-center">Puedes elegir Coberturas a tu medida.</h5>                
+                            <p class="card-text text-center">Elije la cobertura que esté de acuerdo a tu necesidad o bolsillo. A medida que agrega o eliminas coberturas, el monto del seguro se ajusta y aparece instantáneamente..</p>                    
                           </div>
                         </div>
                       </div>
