se arreglo algunos errores

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div id="QueEsMiBigBro">
                 <h2 class="titulo px115">¿Qué es miBigBro?</h2>                        
                 <p class="sub-title px115">miBigBro te permite comprar un seguro vehicular:</p>  
-                <p class="description-1 pl115 text-justify"><strong>En función a tus necesidades</strong> ya que, por ejemplo, puedes adquirir un seguro con vigencia desde 3 días a 1 año. Cómo también eliges las coberturas que desees. Además, escoges la modalidad de pago que desees y en función del dinero que tengas disponible.</p>
+                <p class="description-1 pl115 text-justify"><strong>En función a tus necesidades</strong> ya que, por ejemplo, puedes adquirir un seguro con vigencia desde 7 días a 1 año. Cómo también eliges las coberturas que desees. Además, escoges la modalidad de pago que desees y en función del dinero que tengas disponible.</p>
                 <p class="description-2 pr115 text-justify">Cuando quieras, porque no necesitas ir a una oficina y depender de sus horarios, lo compras desde tu celular y desde la comodidad de tu casa en el horario que desees. En menos de 24 horas tienes tu seguro. Disponible 24/7 para ti.</p>
                 <img  class="icon-logo img-fluid" src="assets/img/icon-logo.png" alt="icon-logo" />             
                 <!--desktop-->
@@ -609,13 +609,13 @@
         <div class="container-fluid">
           <div class="row px132">
               <div class="col-12">
-                <h2 class="title text-center">Cuál la experiencia de los usuarios de miBigBro</h2>
+                <h2 class="title text-center">Cuál es la experiencia de los usuarios de miBigBro</h2>
               </div>
           </div>
           <div class="row px132 owl-testimonios owl-carousel"> 
             <div class="card">
               <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="card-text">Magnifica app, es un gran ahorro para mi familia.</p>
                 <div class="items-star d-flex flex-row my-4">
                   <i class="star"><img src="assets/icons/star.svg"  alt="star views"/></i>
                   <i class="star"><img src="assets/icons/star.svg"  alt="star views"/></i>
